<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AutomatedAppLaunchWarningDialogScrollView">
    <LinearLayout
        style="@style/AutomatedAppLaunchWarningDialogContent">
        <LinearLayout
            style="@style/AutomatedAppLaunchWarningDialogIconBar">
            <ImageView
                android:id="@+id/agent_icon"
                style="@style/AutomatedAppLaunchWarningDialogAgentIcon" />
            <ImageView
                android:id="@+id/target_icon"
                style="@style/AutomatedAppLaunchWarningDialogTargetIcon" />
        </LinearLayout>
        <TextView
            android:id="@+id/title"
            android:text="@string/automated_app_launch_warning_dialog_title"
            style="@style/AutomatedAppLaunchWarningDialogTitle" />
        <TextView
            android:id="@+id/description"
            android:text="@string/automated_app_launch_warning_dialog_description"
            style="@style/AutomatedAppLaunchWarningDialogDescription" />
        <LinearLayout
            style="@style/AutomatedAppLaunchWarningDialogButtonBar">
            <Button
                android:id="@+id/stop_button"
                android:text="@string/automated_app_launch_warning_dialog_stop"
                style="@style/AutomatedAppLaunchWarningDialogStopButton" />
            <Button
                android:id="@+id/wait_button"
                android:text="@string/automated_app_launch_warning_dialog_wait"
                style="@style/AutomatedAppLaunchWarningDialogWaitButton" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
